samples/_failures_safe/1761424287_f92876_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b2da786.c: In function ‘main’:
./samples/SAFE/__tmp_0b2da786.c:138:1: error: expected declaration or statement at end of input
  138 | int main() {
      | ^~~
